--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,8 @@
 = graphael-rails
 
-Description goes here.
-
+Gem for (g)raphael, includes both graphael aswell as raphael as submodules.
+To use it in your rails app include it in your gemfile and require raphael/raphael.js and whatever g.raphael graphs you require in your css files.
+ 
 == Contributing to graphael-rails
  
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
@@ -11,9 +12,3 @@ Description goes here.
 * Commit and push until you are happy with your contribution
 * Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
 * Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
-
-== Copyright
-
-Copyright (c) 2012 christian.schwartz. See LICENSE.txt for
-further details.
-
